--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,3 +1,10 @@
+/* Colors */
+:root {
+  --sslBlue: #070B51;
+  --sslGold: #BD9523;
+}
+
+
 .App {
   text-align: center;
 }
@@ -32,6 +39,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
