--- a/app/src/components/Sidebar/sidebar.css
+++ b/app/src/components/Sidebar/sidebar.css
@@ -19,11 +19,10 @@
 
 #menu li a.active, li.active {
     @apply text-green-900 bg-green-200 rounded-md;
-    border-radius: 0.375rem !important;
-    color: rgb(20 83 45 / var(--tw-text-opacity)) !important;
+    color: rgb(20 83 45 / var(--tw-text-opacity));
 }
 
-#menu ul > li > a.link{
+#menu ul > li > a.link{ 
     @apply font-normal;
     position: relative;
 }
