--- a/app/src/App.css
+++ b/app/src/App.css
@@ -63,3 +63,21 @@ h1 {
   margin: auto;
   text-align: center;
 }
+
+h2 {
+  font-family: var(--sslFont);
+  font-size: 1.6rem;
+  font-weight: bold;
+  color: var(--fontColor);
+  margin: auto;
+  text-align: center;
+}
+
+h3 {
+  font-family: var(--sslFont);
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: var(--fontColor);
+  margin: auto;
+  text-align: center;
+}
