--- a/app/src/components/Datatables/reactableStyles.css
+++ b/app/src/components/Datatables/reactableStyles.css
@@ -24,7 +24,7 @@
     gap: 10px;
     margin: 10px;
     width: 95%;
-    max-width: 700px;
+    /* max-width: 700px; */
 }
 
 .reactable-settings {
